--- a/index.html
+++ b/index.html
@@ -7,18 +7,15 @@
 </head>
 
 <body>
-
-  <ul>
   
-  <li> <a href="http://youtube.com/tsskyx">My YouTube</a> </li>
-  <li> <a href="https://tsskyx.tumblr.com/">My Tumblr</a> </li>
-  <li> <a href="https://www.deviantart.com/tsskyx">My DeviantArt</a> </li>
-  <li> <a href="https://soundcloud.com/tsskyx">My SoundCloud</a> </li>
-  <li> <a href="https://musescore.com/user/11819951">My MuseScore</a> </li>
-  <li> <a href="https://reddit.com/u/tsskyx">My Reddit</a> </li>
+  <p> <a href="http://youtube.com/tsskyx", "style="font-size:36pt;">My YouTube</a> </p>
+  <p> <a href="https://tsskyx.tumblr.com/", "style="font-size:36pt;">My Tumblr</a> </p>
+  <p> <a href="https://www.deviantart.com/tsskyx", "style="font-size:36pt;">My DeviantArt</a> </p>
+  <p> <a href="https://soundcloud.com/tsskyx", "style="font-size:36pt;">My SoundCloud</a> </p>
+  <p> <a href="https://musescore.com/user/11819951", "style="font-size:36pt;">My MuseScore</a> </p>
+  <p> <a href="https://reddit.com/u/tsskyx", "style="font-size:36pt;">My Reddit</a> </p>
+  <p> <a href="https://jsfiddle.net/user/Tsskyx/fiddles/", "style="font-size:36pt;">My JsFiddle</a> </p>
   
-  </ul>
-
 </body>
 
 </html>
