--- a/index.html
+++ b/index.html
@@ -8,19 +8,13 @@
 
 <body>
   
-  <p> <a href="http://youtube.com/tsskyx", "style="font-size:36pt;">My YouTube</a> </p>
-  <br>
-  <p> <a href="https://tsskyx.tumblr.com/", "style="font-size:36pt;">My Tumblr</a> </p>
-  <br>
-  <p> <a href="https://www.deviantart.com/tsskyx", "style="font-size:36pt;">My DeviantArt</a> </p>
-  <br>
-  <p> <a href="https://soundcloud.com/tsskyx", "style="font-size:36pt;">My SoundCloud</a> </p>
-  <br>
-  <p> <a href="https://musescore.com/user/11819951", "style="font-size:36pt;">My MuseScore</a> </p>
-  <br>
-  <p> <a href="https://reddit.com/u/tsskyx", "style="font-size:36pt;">My Reddit</a> </p>
-  <br>
-  <p> <a href="https://jsfiddle.net/user/Tsskyx/fiddles/", "style="font-size:36pt;">My JsFiddle</a> </p>
+  <p> <a href="http://youtube.com/tsskyx", style="font-size:36pt;">My YouTube</a> </p>
+  <p> <a href="https://tsskyx.tumblr.com/", style="font-size:36pt;">My Tumblr</a> </p>
+  <p> <a href="https://www.deviantart.com/tsskyx", style="font-size:36pt;">My DeviantArt</a> </p>
+  <p> <a href="https://soundcloud.com/tsskyx", style="font-size:36pt;">My SoundCloud</a> </p>
+  <p> <a href="https://musescore.com/user/11819951", style="font-size:36pt;">My MuseScore</a> </p>
+  <p> <a href="https://reddit.com/u/tsskyx", style="font-size:36pt;">My Reddit</a> </p>
+  <p> <a href="https://jsfiddle.net/user/Tsskyx/fiddles/", style="font-size:36pt;">My JsFiddle</a> </p>
   
 </body>
 
