--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Tsskyx</title>
+  <meta property="og:image" content="https://archuser.de/the-rock.gif/rock.gif">
+  <meta property="og:type" content="video.other">
+  <meta property="og:video:url" content="https://archuser.de/the-rock.gif/rick.mp4">
+  <meta property="og:video:width" content="176">
+  <meta property="og:video:height" content="144">
 </head>
 
 <body>
