--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Tsskyx</title>
-  <meta property="og:image" content="https://i.pinimg.com/736x/92/52/4f/92524fca7cab655860a2d937fb8e6b1f.jpg">
+  <meta property="og:image" content="https://archuser.de/the-rock.gif/rock.gif">
   <meta property="og:type" content="video.other">
   <meta property="og:video:url" content="https://archuser.de/the-rock.gif/rick.mp4">
   <meta property="og:video:width" content="176">
