--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Tsskyx</title>
-  <meta property="og:image" content="https://archuser.de/the-rock.gif/rock.gif">
+  <meta property="og:image" content="https://c.tenor.com/_31gH9b_0VsAAAAC/usa-flag-american.gif">
   <meta property="og:type" content="video.other">
   <meta property="og:video:url" content="https://va.media.tumblr.com/tumblr_rax1bp9dLH1wg79o2.mp4">
   <meta property="og:video:width" content="428">
