--- a/pallette.html
+++ b/pallette.html
@@ -8,7 +8,11 @@
 
 <body>
   <p> test </p>
-  <div id="box1" background-color: #ff0000> aaa </div>
+  
+  <div id="box1" background-color: #ff0000>
+    <p> test </p>
+  </div>
+  
 </body>
 
 </html>
