--- a/pallette.html
+++ b/pallette.html
@@ -8,11 +8,7 @@
 
 <body>
   <p> test </p>
-  
-  <div id="box1" background-color: #ff0000>
-    <p> test </p>
-  </div>
-  
+  <div background:#ff0000; float: left; width: 20px; height: 20px; margin: 5px;></div>
 </body>
 
 </html>
