--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
   
   <p> <a href="http://youtube.com/tsskyx", style="font-size:20pt;">My YouTube</a> </p>
+  <p> <a href="https://reddit.com/u/tsskyx", style="font-size:20pt;">My Reddit</a> </p>
   <p> <a href="https://tsskyx.tumblr.com/", style="font-size:20pt;">My Tumblr</a> </p>
   <p> <a href="https://www.deviantart.com/tsskyx", style="font-size:20pt;">My DeviantArt</a> </p>
+  <p> <a href="https://archiveofourown.org/users/Tsskyx", style="font-size:20pt;">My AO3</a> </p>
   <p> <a href="https://soundcloud.com/tsskyx", style="font-size:20pt;">My SoundCloud</a> </p>
   <p> <a href="https://musescore.com/user/11819951", style="font-size:20pt;">My MuseScore</a> </p>
-  <p> <a href="https://reddit.com/u/tsskyx", style="font-size:20pt;">My Reddit</a> </p>
   <p> <a href="https://jsfiddle.net/user/Tsskyx/fiddles/", style="font-size:20pt;">My JsFiddle</a> </p>
   <p> <a href="https://editor.p5js.org/Tsskyx/sketches", style="font-size:20pt;">My p5</a> </p>
   
