--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   
   <p> <a href="http://youtube.com/tsskyx", style="font-size:20pt;">My YouTube</a> </p>
   <p> <a href="https://reddit.com/u/tsskyx", style="font-size:20pt;">My Reddit</a> </p>
+  <p> <a href="https://x.com/tsskyx", style="font-size:20pt;">My Twitter</a> </p>
+  <p> <a href="https://bsky.app/profile/tsskyx.bsky.social", style="font-size:20pt;">My Bluesky</a> </p>
   <p> <a href="https://tsskyx.tumblr.com/", style="font-size:20pt;">My Tumblr</a> </p>
   <p> <a href="https://www.deviantart.com/tsskyx", style="font-size:20pt;">My DeviantArt</a> </p>
   <p> <a href="https://archiveofourown.org/users/Tsskyx", style="font-size:20pt;">My AO3</a> </p>
