--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
   <p> <a href="https://archiveofourown.org/users/Tsskyx", style="font-size:20pt;">My AO3</a> </p>
   <p> <a href="https://soundcloud.com/tsskyx", style="font-size:20pt;">My SoundCloud</a> </p>
   <p> <a href="https://musescore.com/user/11819951", style="font-size:20pt;">My MuseScore</a> </p>
-  <p> <a href="https://jsfiddle.net/user/Tsskyx/fiddles/", style="font-size:20pt;">My JsFiddle</a> </p>
-  <p> <a href="https://editor.p5js.org/Tsskyx/sketches", style="font-size:20pt;">My p5</a> </p>
+  <p> <a href="https://editor.p5js.org/Tsskyx/sketches", style="font-size:20pt;">My p5.js</a> </p>
   
 </body>
 
